# function-map-mcp

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
docs/: CFG_DFG_DESIGN.md
scripts/: mcp_call.py
src/: db_maintenance.rs  file_watcher.rs  function_extractor.rs  hierarchical_tree.rs  hierarchical_tree_enhanced.rs  junk_filter.rs  lib.rs  m1_formatter.rs  main.rs  main.rs.backup-1765917439  mcp_protocol.rs  mcp_protocol.rs.backup  mcp_protocol.rs.backup-1766050306  mcp_protocol.rs.backup-1766050555  mcp_protocol.rs.backup-1767566827  mcp_protocol.rs.backup-1767566835  mcp_protocol.rs.backup-1767566852  mcp_protocol.rs.backup-1767567251  mcp_protocol.rs.backup-1767567322  mcp_protocol.rs.backup-1767567411  psi_graph.rs  regex_patterns.rs  simple_cfg_analyzer.rs  tree_sitter_extractor.rs  tree_sitter_extractor.rs.backup-1766668803  tree_sitter_extractor.rs.backup-1766668817  tree_sitter_extractor.rs.backup-1766668832  ultra_fast_scanner.rs
tests/: path_normalization.rs
