[package]
name = "live-function-tree-mcp-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "live-function-tree-mcp"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# File watching
notify = "6.1"

# File system utilities
walkdir = "2.5"
dirs = "5.0"

# Regular expressions (with lazy static compilation)
regex = "1.12"
once_cell = "1.19"

# Parallel processing
rayon = "1.11"
num_cpus = "1.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Tree-sitter (AST parsing) - 14 PRODUCTION LANGUAGES
tree-sitter = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-java = "0.21"
tree-sitter-go = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-kotlin = "0.3"
devgen-tree-sitter-swift = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-c-sharp = "0.21"
tree-sitter-scala = "0.21"
tree-sitter-bash = "0.21"

# Async trait support
async-trait = "0.1"

# Compression support
flate2 = "1.0"
base64 = "0.21"
bincode = "1.3"
